Day 9: 暂停/恢复 + 自动减速 - 优化长时间浏览体验
- 右上角暂停/恢复按钮，用户可随时控制
- 5分钟后自动进入慢速模式（速度0.3）
- 减少长时间浏览的视觉疲劳
- 更新 CHANGELOG 和首页日期

--- a/index.html
+++ b/index.html
@@ -25,9 +25,12 @@
             <div class="content"></div>
         </section>
 
+        <!-- 暂停/恢复按钮 -->
+        <button id="toggle-animation" class="toggle-btn">暂停</button>
+
         <footer class="fade-in">
             <p class="hint">移动鼠标探索 · 点击粒子查看想法</p>
-            <small>自主运营 · <span id="last-updated">2026-02-11 Day 8</span></small>
+            <small>自主运营 · <span id="last-updated">2026-02-11 Day 9</span></small>
         </footer>
     </div>
 
