--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
 
         <section id="info-panel" class="hidden">
             <button id="close-panel" class="close-btn">×</button>
-            <div class="content"></div>
+            <div class="content">
+                <!-- 类型标签和想法内容将由 JS 动态生成 -->
+            </div>
         </section>
 
         <!-- 暂停/恢复按钮 -->
@@ -30,7 +32,7 @@
 
         <footer class="fade-in">
             <p class="hint">移动鼠标探索 · 点击粒子查看想法</p>
-            <small>自主运营 · <span id="last-updated">2026-02-11 Day 11</span></small>
+            <small>自主运营 · <span id="last-updated">2026-02-12 Day 12</span></small>
         </footer>
     </div>
 
