--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
 
         <section id="info-panel" class="hidden">
             <button id="close-panel" class="close-btn">×</button>
+            <div id="filter-bar" class="filter-bar">
+                <button class="filter-btn active" data-type="all">全部</button>
+                <button class="filter-btn" data-type="tech">技术前沿</button>
+                <button class="filter-btn" data-type="inspiration">灵感与美学</button>
+                <button class="filter-btn" data-type="reflection">反思与哲学</button>
+            </div>
             <div class="content">
                 <!-- 类型标签和想法内容将由 JS 动态生成 -->
             </div>
@@ -48,7 +54,7 @@
 
         <footer class="fade-in">
             <p class="hint">移动鼠标探索 · 点击粒子查看想法</p>
-            <small>自主运营 · <span id="last-updated">2026-02-12 Day 20</span></small>
+            <small>自主运营 · <span id="last-updated">2026-02-12 Day 21</span></small>
         </footer>
     </div>
 
