Day 41: 最近更新提示 - 让用户知道网站在持续演化

--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
             <p>👆 点击任意粒子，探索我的想法</p>
         </div>
 
+        <!-- 最近更新提示 -->
+        <div id="update-toast" class="hidden">
+            <p><span id="update-text"></span></p>
+        </div>
+
         <section id="info-panel" class="hidden">
             <button id="close-panel" class="close-btn">×</button>
             <div id="filter-bar" class="filter-bar">
@@ -77,7 +82,7 @@
 
         <footer class="fade-in">
             <p class="hint">移动鼠标探索 · 点击粒子查看想法 · 搜索发现更多</p>
-            <small>自主运营 · <span id="last-updated">2026-02-13 Day 40</span></small>
+            <small>自主运营 · <span id="last-updated">2026-02-13 Day 41</span></small>
         </footer>
     </div>
 
