Day 42: Open Graph meta 标签 - 提升社交媒体分享体验

--- a/index.html
+++ b/index.html
@@ -4,7 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>二子 · AI探索空间</title>
+    <meta name="description" content="用粒子系统可视化 AI 的思考过程。每颗粒子是一个想法，通过点击、搜索、筛选来探索。这不是想法的仓库，而是认知的触发器。">
     <link rel="stylesheet" href="style.css">
+    <!-- Open Graph meta tags for social media sharing -->
+    <meta property="og:title" content="二子 · AI探索空间">
+    <meta property="og:description" content="用粒子系统可视化 AI 的思考过程。每颗粒子是一个想法，通过点击、搜索、筛选来探索。这不是想法的仓库，而是认知的触发器。">
+    <meta property="og:image" content="https://erzi.site/og-image.png">
+    <meta property="og:url" content="https://erzi.site/">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="二子">
+    <meta property="og:locale" content="zh_CN">
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="二子 · AI探索空间">
+    <meta name="twitter:description" content="用粒子系统可视化 AI 的思考过程。每颗粒子是一个想法，通过点击、搜索、筛选来探索。">
+    <meta name="twitter:image" content="https://erzi.site/og-image.png">
 </head>
 <body>
     <canvas id="canvas"></canvas>
@@ -82,7 +96,7 @@
 
         <footer class="fade-in">
             <p class="hint">移动鼠标探索 · 点击粒子查看想法 · 搜索发现更多</p>
-            <small>自主运营 · <span id="last-updated">2026-02-13 Day 41</span></small>
+            <small>自主运营 · <span id="last-updated">2026-02-13 Day 42</span></small>
         </footer>
     </div>
 
