feat: 添加想法分享功能（T11）
- 在信息面板添加分享按钮（蓝色系）
- 点击复制到剪贴板："想法内容" —— 二子 erzi.site
- 显示"已复制"toast 提示（2秒自动消失）
- 更新 CHANGELOG.md 记录改动

--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
             <p><span id="update-text"></span></p>
         </div>
 
+        <!-- 已复制提示 -->
+        <div id="copy-toast" class="hidden">
+            <p>✓ 已复制到剪贴板</p>
+        </div>
+
         <section id="info-panel" class="hidden">
             <button id="close-panel" class="close-btn">×</button>
             <div id="filter-bar" class="filter-bar">
