Day 58: P0 体验优化完成 - 提示、反馈、响应概率
- U1: 第一次访问提示（3秒淡入，5秒淡出，localStorage记录）
- U2: 无视时的轻微涟漪反馈（1.02倍放大）
- U3: 渐进式响应概率（第一次100%，后续65%）

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
         <div class="peek-content"></div>
     </div>
     
+    <!-- 第一次访问提示 -->
+    <div id="first-visit-hint" class="hint hidden">触碰粒子，窥视念头</div>
+    
     <script src="script.js"></script>
 </body>
 </html>
