fix: 宇宙时间和神秘计数器移至页面底部

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   /* 宇宙背景时间 */
   .cosmic-time {
     position: fixed;
-    top: 20px;
+    bottom: 20px;
     left: 50%;
     transform: translateX(-50%);
     font-family: 'JetBrains Mono', 'Courier New', monospace;
